change package name

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "author": "Jessica X",
-  "name": "multiselectsearchtree",
+  "name": "jessicaX-multiselectsearchtree",
   "version": "0.0.1",
   "description": "Amazing tree list component; bind ready with ability to search, collide selection. Powered by AngularJS",
   "homepage": "https://github.com/lnxueyu",
