--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "multiselectsearchtree",
+  "name": "jessicaX-multiselectsearchtree",
   "version": "0.0.1",
   "description": "Amazing tree list component; bind ready with ability to search. Powered by AngularJS",
   "repository": {
