--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
     "url": "https://github.com/lnxueyu/multiselectsearchtree"
   },
   "keywords": [
+    "angular",
+    "angularjs",
+    "multiselect",
+    "search",
+    "tree",
+    "bind",
+    "hierarchy",
+    "tree"
   ],
   "license": "MIT",
   "bugs": {
