--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,15 @@
   "devDependencies": {
     "angular-mocks": "~1.3.x"
   },
-  "keywords": [],
+  "keywords": [
+    "angular",
+    "angularjs",
+    "multiselect",
+    "search",
+    "tree",
+    "bind",
+    "hierarchy",
+    "tree"
+  ],
   "license": "MIT"
 }
